# webserv

./: .gitignore  CGI.cpp  CGI.hpp  CMakeLists.txt  CMakefile  EventLogger.cpp  EventLogger.hpp  HTTP.cpp  HTTP.hpp  HTTPBase.cpp  HTTPBase.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPStatusCodes.hpp  ISocket.cpp  ISocket.hpp  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  Settings.cpp  Settings.hpp  Socket.cpp  Socket.hpp  SocketConnect.cpp  SocketConnect.hpp  SocketInterface.cpp  SocketInterface.hpp  SocketListen.cpp  SocketListen.hpp  Token.cpp  Token.hpp  dir_test.cpp  doxy.conf  getaddrinfo_example.cpp  (+6 more)
.github/workflows/: static-testing.yml
config/: default.conf  four-server.conf  single-server.conf  wrong-config.conf
data/www/: index.html  script.js  test.py  upload.html
data/www/cgi-bin/: hallo.html  hello.php  phpinfo.php  sleep.py  sleep_too_long.py  test.html  test.py  test.sh  test_post.py
doc/: doxy.conf
src/: EventLogger.cpp  EventLogger.hpp  HTTP.cpp  HTTP.hpp  HTTPBase.cpp  HTTPBase.hpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPResponse.hpp  ISocket.cpp  ISocket.hpp  Lexer.hpp  Parser.cpp  Parser.hpp  Server.cpp  Server.hpp  Settings.cpp  Settings.hpp  SocketConnect.cpp  SocketConnect.hpp  SocketListen.cpp  SocketListen.hpp  Token.cpp  Token.hpp  main.cpp
status-pages/: 403.html  404.html  500.html
tests/: webserv_test.py
